@startuml

title __WEBAPP's Class Diagram__\n

  namespace io.radien.webapp {
    abstract class io.radien.webapp.AbstractLocaleManager {
        {static} # log : Logger
        - activeLanguage : String
        - activeLocale : Locale
        - clientTzOffset : String
        {static} - serialVersionUID : long
        - supportedLanguages : List<String>
        + getActiveLanguage()
        + getActiveLocale()
        + getClientTzOffset()
        + getSupportedLanguages()
        + getSupportedLocales()
        + getTimeZoneList()
        + setActiveLanguage()
        + setClientTzOffset()
        # init()
        - getOffset()
    }
  }
  

  namespace io.radien.webapp {
    abstract class io.radien.webapp.AbstractNavigation {
        {static} # log : Logger
        {static} # serialVersionUID : long
        {static} - BLANK : String
        {static} - PREFIX_PRETTY : String
        {static} - TRUE_STRING : String
        - activeNavigationNode : String
        - defaultLandingPage : String
        - paramNavigationNode : String
        + getActiveNavigationNode()
        + navigate()
        + navigate()
        + navigationAction()
        + navigationAction()
        + updateNavigationNode()
        {abstract} # getOAF()
        # init()
        # setActiveNavigationNode()
        - getPrettyPrefix()
    }
  }
  

  namespace io.radien.webapp {
    abstract class io.radien.webapp.AbstractOafResourceBundle {
        {static} # DEFAULT_BUNDLE_NAME : String
        {static} - UTF8_CONTROL : Control
        {static} - log : Logger
        + AbstractOafResourceBundle()
        {abstract} + getBundleName()
        + getKeys()
        # handleGetObject()
    }
  }
  

  namespace io.radien.webapp {
    abstract class io.radien.webapp.AbstractWebapp {
        {static} # log : Logger
        {static} - serialVersionUID : long
        + getAppName()
        + getBuildNumber()
        + getProperty()
        + getVersion()
        + getWebappVersion()
        + isDynamicAppmenuDisplayed()
        + isShowLogin()
    }
  }
  

  namespace io.radien.webapp {
    class io.radien.webapp.HTTPSessionHandler {
        {static} - log : Logger
        {static} - serialVersionUID : long
        + HTTPSessionHandler()
        + eraseCookies()
        + eraseCookies()
        + getRequest()
        + getSession()
        + getSession()
        + getUser()
        + getUser()
        + getUser()
        + logout()
        + logout()
        + register()
        + register()
        + register()
        + update()
        - init()
    }
  }
  

  namespace io.radien.webapp {
    class io.radien.webapp.JSFUtil {
        {static} - log : Logger
        {static} + addErrorMessage()
        {static} + addErrorMessage()
        {static} + addErrorMessage()
        {static} + addErrorMessage()
        {static} + addMessage()
        {static} + addMessage()
        {static} + addSuccessMessage()
        {static} + addSuccessMessage()
        {static} + addSuccessMessage()
        {static} + addTranslatableMessage()
        {static} + addWarningMessage()
        {static} + addWarningMessage()
        {static} + addWarningMessage()
        {static} + getBaseUrl()
        {static} + getExternalContext()
        {static} + getFacesContext()
        {static} + getFacesContext()
        {static} + getFileNameFromPart()
        {static} + getLong()
        {static} + getLong()
        {static} + getMessage()
        {static} + getMessage()
        {static} + getRequest()
        {static} + getRequestParameter()
        {static} + getString()
        {static} + getString()
        - JSFUtil()
        {static} - getReturnVal()
    }
  }
  

  namespace io.radien.webapp {
    abstract class io.radien.webapp.JSFUtil.FacesContextWrapper {
        {static} # setCurrentInstance()
    }
  }
  

  namespace io.radien.webapp {
    class io.radien.webapp.Navigation {
        {static} - serialVersionUID : long
        # getOAF()
    }
  }
  

  namespace io.radien.webapp {
    interface io.radien.webapp.RedirectHandler {
        {abstract} + redirectTo()
        {abstract} + redirectToErrorPage()
        {abstract} + redirectToIndex()
        {abstract} + redirectToLogout()
        {abstract} + redirectToPublicIndex()
    }
  }
  

  namespace io.radien.webapp {
    class io.radien.webapp.RedirectUtil {
        {static} # log : Logger
        - publicIndex : String
        {static} - serialVersionUID : long
        {static} + combineURLSegment()
        + getOAF()
        + getProperty()
        + redirectTo()
        + redirectToErrorPage()
        + redirectToIndex()
        + redirectToLogout()
        + redirectToPublicIndex()
        - init()
    }
  }
  

  namespace io.radien.webapp {
    interface io.radien.webapp.SessionHandler {
        {static} + ATTR_USER : String
        {abstract} + eraseCookies()
        {abstract} + eraseCookies()
        {abstract} + getRequest()
        {abstract} + getSession()
        {abstract} + getSession()
        {abstract} + getUser()
        {abstract} + getUser()
        {abstract} + getUser()
        {abstract} + logout()
        {abstract} + logout()
        {abstract} + register()
        {abstract} + register()
        {abstract} + register()
        {abstract} + update()
    }
  }
  

  namespace io.radien.webapp {
    class io.radien.webapp.UserDetails {
    }
  }
  

  io.radien.webapp.AbstractLocaleManager .up.|> io.radien.api.webapp.i18n.LocaleManagerAccess
  io.radien.webapp.AbstractNavigation .up.|> java.io.Serializable
  io.radien.webapp.AbstractOafResourceBundle -up-|> java.util.ResourceBundle
  io.radien.webapp.AbstractWebapp .up.|> io.radien.api.Appframeable
  io.radien.webapp.HTTPSessionHandler .up.|> io.radien.webapp.SessionHandler
  io.radien.webapp.JSFUtil +-down- io.radien.webapp.JSFUtil.FacesContextWrapper
  io.radien.webapp.JSFUtil.FacesContextWrapper -up-|> javax.faces.context.FacesContext
  io.radien.webapp.Navigation -up-|> io.radien.webapp.AbstractNavigation
  io.radien.webapp.Navigation o-- io.radien.api.OAFAccess : oaf
  io.radien.webapp.RedirectUtil .up.|> io.radien.webapp.RedirectHandler
  io.radien.webapp.RedirectUtil o-- io.radien.api.OAFAccess : oaf


 

@enduml
